# shion

./: .gitignore  main.py  pyproject.toml  run_example.fish
src/: client.py  gemini.py  history.py  main.py  settings.py
